Send data and imagen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
                 android:resource="@xml/rutas" />
         </provider>
 
+        <service
+            android:name=".servicios.EnviarInfoService"></service>
     </application>
 
 </manifest>
