Add imgs to bloques

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".SetImgBloqueActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,7 +46,7 @@
 
         <service android:name=".servicios.EnviarInfoService" />
 
-        <activity android:name=".SetUbicacionActivity"></activity>
+        <activity android:name=".SetUbicacionActivity" />
     </application>
 
 </manifest>
